--- a/Njoguu/About.html
+++ b/Njoguu/About.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <!-- Required meta tags -->
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="bootstrap-4.4.1-dist/css/bootstrap.min.css">
     <!--custom css-->
     <link rel="stylesheet" href="css/main.css">
-    <title>Sign Up</title>
+    <title>About</title>
 </head>
-<body class="signupbody">
+<body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-success">
     <a class="navbar-brand" href="index.html">
         <img src="images/LOGO.png" alt="">
@@ -60,54 +60,47 @@
         </form>
     </div>
 </nav>
+<h1><span class="badge badge-success">About Us</span></h1>
 <div class="container">
     <div class="row">
-        <div class="col col-sd-4 col-md-4 col-lg-4 col-xl-4"></div>
-        <div class="col col-sd-4 col-md-4 col-lg-4 col-xl-4">
-            <form action="" method="post">
-                <fieldset class="auth-signup">
-                    <h2 class="content-title">Sign Up</h2>
-                    <hr>
-                    <div class="auth-img">
-                        <img src="images/agri.jpeg" alt="">
-                    </div>
-                    <div class="form-group">
-                        <label form="">Username</label>
-                        <input type="text" name="username" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <label form="">First Name</label>
-                        <input type="text" name="username" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <label form="">Last Name</label>
-                        <input type="text" name="username" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <label form="">Email</label>
-                        <input type="email" name="Email" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <label form="">Password</label>
-                        <input type="password" name="Password" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <label form="">Confirm Password</label>
-                        <input type="password" name="Password" class="form-control">
-                    </div>
-                    <button class="btn btn-outline-info">SignUp</button>
-                </fieldset>
-            </form>
+        <div class="col col-sm-3 col-md-3 col-lg-3 col-xl-3">
+            <div class="card" style="width: 18rem;">
+                <img src="images/agribit.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-outline-success">View</a>
+                </div>
+            </div>
         </div>
-        <div class="col col-sd-4 col-md-4 col-lg-4 col-xl-4"></div>
-        <div class="col col-sd-4 col-md-4 col-lg-4 col-xl-4"></div>
+        <div class="col col-sm-3 col-md-3 col-lg-3 col-xl-3">
+            <div class="card" style="width: 18rem;">
+                <img src="images/facilities-2469.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-outline-success">View</a>
+                </div>
+            </div>
+        </div>
+        <div class="col col-sm-3 col-md-3 col-lg-3 col-xl-3">
+            <div class="card" style="width: 18rem;">
+                <img src="images/Community.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-outline-success">View</a>
+                </div>
+            </div>
+        </div>
+        <div class="col col-sm-3 col-md-3 col-lg-3 col-xl-3">
+            <div class="card" style="width: 18rem;">
+                <img src="images/tyxlin5jmvajkjkxur5d5c4abbae220.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-outline-success">View</a>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
 
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+</div>
 </body>
 </html>
