--- a/Njoguu/Contact Us.html
+++ b/Njoguu/Contact Us.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <!-- Required meta tags -->
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="bootstrap-4.4.1-dist/css/bootstrap.min.css">
     <!--custom css-->
     <link rel="stylesheet" href="css/main.css">
-    <title>Sign Up</title>
+    <title>Contact Us</title>
 </head>
-<body class="signupbody">
+<body style="height: 90vh">
 <nav class="navbar navbar-expand-lg navbar-dark bg-success">
     <a class="navbar-brand" href="index.html">
         <img src="images/LOGO.png" alt="">
@@ -60,54 +60,62 @@
         </form>
     </div>
 </nav>
+<h1><span class="badge badge-success">Contact Us</span></h1>
+
 <div class="container">
     <div class="row">
-        <div class="col col-sd-4 col-md-4 col-lg-4 col-xl-4"></div>
-        <div class="col col-sd-4 col-md-4 col-lg-4 col-xl-4">
-            <form action="" method="post">
-                <fieldset class="auth-signup">
-                    <h2 class="content-title">Sign Up</h2>
-                    <hr>
-                    <div class="auth-img">
-                        <img src="images/agri.jpeg" alt="">
-                    </div>
-                    <div class="form-group">
-                        <label form="">Username</label>
-                        <input type="text" name="username" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <label form="">First Name</label>
-                        <input type="text" name="username" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <label form="">Last Name</label>
-                        <input type="text" name="username" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <label form="">Email</label>
-                        <input type="email" name="Email" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <label form="">Password</label>
-                        <input type="password" name="Password" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <label form="">Confirm Password</label>
-                        <input type="password" name="Password" class="form-control">
-                    </div>
-                    <button class="btn btn-outline-info">SignUp</button>
-                </fieldset>
-            </form>
+        <div class="col col-sm-3 col-md-3 col-lg-3 col-xl-3">
+            <div class="card" style="width: 18rem;height: 85vh">
+                <div class="card-body">
+                    <h5 class="card-title">Send Us a Message.</h5>
+                    <p class="card-text">Find below how you can communicate to your opinions and comments.</p>
+                    <p>Thank You!</p>
+                </div>
+                <br><br><br><br>
+                <ul class="list-group list-group-flush">
+                    <form>
+                        <div class="form-group">
+                            <label for="exampleCheck1">Full Name</label>
+                            <input type="text" placeholder="Enter Full name">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">Email address</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                        </div>
+                        <div class="form-group" style="height: 50px">
+                            <input type="text" placeholder="Enter Message">
+                        </div>
+                        <div class="form-group form-check">
+                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                            <label class="form-check-label" for="exampleCheck1">Im ok with this.</label>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                </ul>
+            </div>
         </div>
-        <div class="col col-sd-4 col-md-4 col-lg-4 col-xl-4"></div>
-        <div class="col col-sd-4 col-md-4 col-lg-4 col-xl-4"></div>
+        <div class="col col-sm-3 col-md-3 col-lg-3 col-xl-3" style="padding-left: 50px">
+            <div class="card border-success mb-3" style="width: 500px;height: 85vh">
+                <div class="card-header">Contact Information</div>
+                <div class="card-body text-success">
+                    <img src="images/Green%20with%20White%20Box%20Agriculture%20Logo%20(1).png" alt="" style="width: 100%;height: 200px">
+                    <br>
+                    <div>
+                    <h5>Address:</h5>
+                        <p>P.O Box 1738-254</p></div>
+                    <div>
+                        <h5>Telephone:</h5>
+                        <p>+254-779543789</p>
+                    </div>
+                    <div>
+                        <h5>Email Address</h5>
+                        <p>info@agribitfarmers.co.ke</p>
+                    </div>
+                </div>
+        </div>
     </div>
 </div>
-
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+</div>
 </body>
 </html>
