--- a/Njoguu/index.html
+++ b/Njoguu/index.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="bootstrap-4.4.1-dist/css/bootstrap.min.css">
     <!--custom css-->
     <link rel="stylesheet" href="css/main.css">
-    <title>Hello, world!</title>
+    <title>Home</title>
 </head>
-<nav class="navbar navbar-expand-lg navbar-info bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-success">
     <a class="navbar-brand" href="index.html">
         <img src="images/LOGO.png" alt="">
     </a>
@@ -25,6 +25,12 @@
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="About.html">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="Contact%20Us.html">Contact Us</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="signup.html">Sign Up</a>
@@ -49,35 +55,11 @@
         </ul>
         <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
         </form>
     </div>
 </nav>
 <body>
-<div class="spinner-grow text-primary" role="status">
-    <span class="sr-only">Loading...</span>
-</div>
-<div class="spinner-grow text-secondary" role="status">
-    <span class="sr-only">Loading...</span>
-</div>
-<div class="spinner-grow text-success" role="status">
-    <span class="sr-only">Loading...</span>
-</div>
-<div class="spinner-grow text-danger" role="status">
-    <span class="sr-only">Loading...</span>
-</div>
-<div class="spinner-grow text-warning" role="status">
-    <span class="sr-only">Loading...</span>
-</div>
-<div class="spinner-grow text-info" role="status">
-    <span class="sr-only">Loading...</span>
-</div>
-<div class="spinner-grow text-light" role="status">
-    <span class="sr-only">Loading...</span>
-</div>
-<div class="spinner-grow text-dark" role="status">
-    <span class="sr-only">Loading...</span>
-</div>
 <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
         <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
