edited login,signup and some rows

--- a/Njoguu/index.html
+++ b/Njoguu/index.html
@@ -100,7 +100,7 @@
 </div>
 <section class="sect1">
     <div class="container">
-        <h5 class="content-title."><strong>Top farm input deals.</strong></h5>
+        <h5 class="content-title."><strong>We sell the following products...</strong></h5>
         <div class="row">
             <div class="col col-sm-3 col-md-3 col-lg-3 col-xl-3">
                 <div class="card">
@@ -199,14 +199,12 @@
         rum enim eos et eum exercitationem, facilis fugiat in <br>ipsam iste laborum l
         audantium libero magni nam nesciunt non quisquam quo quod reprehenderit re
         pudiandae rerum veniam vitae voluptate voluptates voluptatum.</p>
-    <video class="vid1"  autoplay>
-        <source src="video/vid2.mp4" type="video/mp4">
-    </video>
+
     <br>
     <a href="">Click here to see more</a>
     <hr>
 </section>
-<br><br><br><br><br><br><br><br><br><br><br><br>
+<br>
 <section class="sect3">
     <h4>What sets us apart.</h4>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad atque beatae d
@@ -216,7 +214,7 @@
     inus natus nobis praesentium quae quibusdam similique sunt totam velit volu
     ptates!</p>
     <div class="row">
-        <div class="col col-sm-3 col-md-3 col-lg-3 col-xl-3">
+        <div class="col col-sm-4 col-md-4 col-lg-4 col-xl-4">
             <div class="card">
                 <img src="images/edu.jpeg" alt="" class="card-img-top">
                 <div class="card-body">
@@ -226,17 +224,18 @@
                 </div>
             </div>
         </div>
-        <div class="col col-sm-3 col-md-3 col-lg-3 col-xl-3">
+        <div class="col col-sm-4 col-md-4 col-lg-4 col-xl-4">
             <div class="card">
-                <img src="images/entea.jpeg" alt="" class="card-img-top">
+                <img src="images/mill.jpeg" alt="" class="card-img-top">
                 <div class="card-body">
-                    <h2 class="card-title">We entertain.</h2>
+                    <h2 class="card-title">We sustain.</h2>
                     <p class="card-text">Lorem ipsum dolor sit amet.</p>
+
                     <button type="submit" class="btn btn-outline-success">View Details</button>
                 </div>
             </div>
         </div>
-        <div class="col col-sm-3 col-md-3 col-lg-3 col-xl-3">
+        <div class="col col-sm-4 col-md-4 col-lg-4 col-xl-4">
             <div class="card">
                 <img src="images/elev.jpg" alt="" class="card-img-top">
                 <div class="card-body">
@@ -248,12 +247,22 @@
         </div>
     </div>
 </section>
+
+<div class="section4b">
+
+</div>
+
+
+
+
+
 <section class="sect4">
     <h4>Why we do it.</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisi
-        cing elit. Architecto, cum!</p>
+    <p>We help local farmers to sell their products to various organizations
+    and individual retailers throughout the country. We make your products accessible
+    all through Kenya and provide sservices to the farmers convenience.</p>
     <div class="row">
-        <div class="col col-sm-3 col-md-3 col-lg-3 col-xl-3">
+        <div class="col col-sm-4 col-md-4 col-lg-4 col-xl-4">
             <div class="card" style="width: 18rem;">
                 <img src="images/crop.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -261,7 +270,7 @@
                 </div>
             </div>
         </div>
-        <div class="col col-sm-3 col-md-3 col-lg-3 col-xl-3">
+        <div class="col col-sm-4 col-md-4 col-lg-4 col-xl-4">
             <div class="card" style="width: 18rem;">
                 <img src="images/farmer.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -269,7 +278,7 @@
                 </div>
             </div>
         </div>
-        <div class="col col-sm-3 col-md-3 col-lg-3 col-xl-3">
+        <div class="col col-sm-4 col-md-4 col-lg-4 col-xl-4">
             <div class="card" style="width: 18rem;">
                 <img src="images/crop2.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
