--- a/Njoguu/login.html
+++ b/Njoguu/login.html
@@ -25,7 +25,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="About.html">About</a>
@@ -69,11 +69,11 @@
                     <h2 class="content-title">Login</h2>
                     <hr>
                     <div class="auth-img">
-                        <img src="images/agri4.jpeg" alt="">
+                        <img src="images/trac2.jpeg" alt="">
                     </div>
                     <div class="form-group">
-                        <label form="">Email</label>
-                        <input type="email" name="Email" class="form-control">
+                        <label form="">Username</label>
+                        <input type="text" name="Username" class="form-control">
                     </div>
                     <div class="form-group">
                         <label form="">Password</label>
