--- a/Njoguu/signup.html
+++ b/Njoguu/signup.html
@@ -25,7 +25,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="About.html">About</a>
@@ -60,16 +60,17 @@
         </form>
     </div>
 </nav>
+
 <div class="container">
     <div class="row">
-        <div class="col col-sd-4 col-md-4 col-lg-4 col-xl-4"></div>
-        <div class="col col-sd-4 col-md-4 col-lg-4 col-xl-4">
+        <div class="col col-sm-4 col-md-4 col-lg-4 col-xl-4"></div>
+        <div class="col col-sm-4 col-md-4 col-lg-4 col-xl-4">
             <form action="" method="post">
                 <fieldset class="auth-signup">
                     <h2 class="content-title">Sign Up</h2>
                     <hr>
                     <div class="auth-img">
-                        <img src="images/agri.jpeg" alt="">
+                        <img src="images/bananas.jpeg" alt="">
                     </div>
                     <div class="form-group">
                         <label form="">Username</label>
@@ -95,12 +96,11 @@
                         <label form="">Confirm Password</label>
                         <input type="password" name="Password" class="form-control">
                     </div>
-                    <button class="btn btn-outline-info">SignUp</button>
+                    <a href="#"><button class="btn btn-outline-danger">SignUp</button></a>
                 </fieldset>
             </form>
         </div>
-        <div class="col col-sd-4 col-md-4 col-lg-4 col-xl-4"></div>
-        <div class="col col-sd-4 col-md-4 col-lg-4 col-xl-4"></div>
+        <div class="col col-sm-4 col-md-4 col-lg-4 col-xl-4"></div>
     </div>
 </div>
 
